# learning-resources

./: .gitignore
ansible/: ansible.cfg  main.yml
ansible-hands-on/: ansible_comprehensive_guide.md
ansible-hands-on/ansible/: fastapi.service.j2  python-test.pem
app/: main.py
container-technology-learning-material/: containerization_guide.md
docker-hands-on/: docker_basics_guide.md
docker-hands-on/demo-app/: .dockerignore  Dockerfile.simple  README.md  backup.sql  docker-compose.yml  docker_commands.sh  main.py  pyproject.toml
kubernetes-hands-on/: k8s_comprehensive_guide.md
kubernetes-hands-on/demo-app/: README.md  demo-app-kubernetes.yml  docker-compose.yml
kubernetes-hands-on/demo-app/backend/: .env.example  Dockerfile  main.py  pyproject.toml
kubernetes-hands-on/demo-app/frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
kubernetes-hands-on/demo-app/frontend/src/: index.css  main.tsx  routeTree.gen.ts
kubernetes-hands-on/demo-app/frontend/src/lib/: api.ts
kubernetes-hands-on/demo-app/frontend/src/routes/: __root.tsx  health.tsx  index.tsx
kubernetes-hands-on/demo-app/frontend/src/routes/posts/: $postId.tsx  index.tsx
kubernetes-hands-on/demo-app/frontend/src/routes/users/: $userId.tsx  index.tsx
terraform-hands-on/: terraform_guide.md
terraform-hands-on/terraform/: .terraform.lock.hcl  ec2.tf  main.tf
